body stretching fixed

--- a/style.css
+++ b/style.css
@@ -3,12 +3,8 @@
   margin: 0;
 }
 
-html {
+html, body {
   height: 100%;
-}
-
-body {
-  min-height: 100%;
 }
 
 a {
@@ -17,6 +13,7 @@ a {
 
 .container {
   min-height: 100%;
+  height: 100%;
   min-width: 300px;
 }
 
@@ -55,7 +52,7 @@ a {
   }
 }
 .content {
-  height: auto;
+  min-height: 100%;
   background-color: #770072;
 }
 
